# UmbraVOX

./: README.md  UmbraVox.cabal
doc/: 01-overview.md  04-consensus.md  06-economics.md  07-message-format.md  09-network.md  10-security.md  12-development-phases.md  13-do178c-assurance.md  14-code-generation.md  19-game-theory.md  20-economic-analysis.md  21-formal-proofs-index.md  proof-04-token-conservation.md  requirements-trace.md  whitepaper-draft.md
doc/hardening/: 03-stealth-addresses.md  05-ratchet-state-protection.md  09-memory-forensics-defense.md  10-fault-injection-defense.md  11-eclipse-attack-defense.md  12-sybil-resistance.md  14-metadata-minimization.md  22-network-protocol-security.md
src/UmbraVox/Crypto/: Curve25519.hs  Random.hs
test/: Main.hs
test/Test/Crypto/: Curve25519.hs
test/evidence/formal-proofs/fstar/: README.md  Spec.AES256.fst  Spec.GCM.fst  Spec.GaloisField.fst  Spec.HKDF.fst  Spec.HMAC.fst  Spec.SHA256.fst  Spec.SHA512.fst  verify.sh
